--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img src="15_improvement.png" alt="15x Improvement" class="icon">
       </div>
       <h1>DataNXT</h1>
-      <button class="sign-in-button">Try Now</button>
+      <button class="sign-in-button">
+  <a href="https://chat.datanxt.de" target="_blank" style="text-decoration: none; color: inherit;">Try Now</a>
+</button>
       <p>The best place for financial analysis, fast, smart and reliable.</p>
     </main>
   </div>
