--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <main class="main-content">
       <div class="icon-section">
-        <img src="15_improvement.png" alt="15x Improvement" class="icon">
+        <img src="DataNXT_icon_raw.png" alt="15x Improvement" class="icon">
       </div>
       <h1>DataNXT</h1>
       <button class="sign-in-button">
