--- a/index.html
+++ b/index.html
@@ -2,30 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DataNXT</title>
   <link rel="stylesheet" href="styles.css">
   <script>
     function loadChatbot() {
-      // 1) Add the "chat-active" class to body or container
+      // Add the "chat-active" class to the body
       document.body.classList.add('chat-active');
 
-      // 2) Move the paragraph into the header
+      // Move the paragraph into the header
       const header = document.querySelector('.header');
       const tagline = document.querySelector('.main-content p');
       header.appendChild(tagline);
 
-      // 3) Hide the "Try Now" button
+      // Hide the "Try Now" button
       const tryNowBtn = document.querySelector('.sign-in-button');
       tryNowBtn.style.display = 'none';
 
-      // 4) Create and insert the chatbot iframe
+      // Hide the icon and title
+      const iconSection = document.querySelector('.icon-section');
+      iconSection.style.display = 'none';
+
+      const mainTitle = document.querySelector('.main-content h1');
+      mainTitle.style.display = 'none';
+
+      // Create and insert the chatbot iframe
       const chatbotContainer = document.createElement('iframe');
       chatbotContainer.src = "https://chat.datanxt.de";
-      chatbotContainer.style.width = '100%';
-      chatbotContainer.style.height = '80vh';
-      chatbotContainer.style.border = 'none';
-      chatbotContainer.style.marginTop = '120px'; // so it appears below the fixed header
+      chatbotContainer.classList.add('chatbot-iframe');
+      chatbotContainer.title = "DataNXT Chatbot"; // Accessibility
+      chatbotContainer.setAttribute('aria-label', 'Chat with DataNXT support'); // Accessibility
       document.body.appendChild(chatbotContainer);
     }
   </script>
