--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
   <header class="header">
     <h1 class="header-title">DataNXT</h1>
-    <p class="header-tagline">The best place for financial analysis, fast, smart, and reliable.</p>
+    <p class="header-tagline hidden">The best place for financial analysis, fast, smart, and reliable.</p>
   </header>
 
   <div class="container">
