--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="header-left">
-      <!-- Logo and Title will appear here -->
-    </div>
-    <p class="header-tagline hidden">The best place for financial analysis, fast, smart, and reliable.</p>
+    <!-- Only the header area, the content morphs into this space -->
   </header>
 
   <div class="container">
