--- a/index.html
+++ b/index.html
@@ -73,6 +73,25 @@
         }, 500);
       }
     }
+
+    // New function to handle clicking on the logo
+    function toggleChatbot() {
+      if (document.body.classList.contains('chat-active')) {
+        closeChatbot();
+      } else {
+        loadChatbot();
+      }
+    }
+
+    // Alternatively, you can add an event listener after the DOM loads
+    document.addEventListener('DOMContentLoaded', () => {
+      const mainLogo = document.querySelector('.main-logo');
+      mainLogo.addEventListener('click', () => {
+        if (document.body.classList.contains('chat-active')) {
+          closeChatbot();
+        }
+      });
+    });
   </script>
 </head>
 <body>
@@ -84,7 +103,8 @@
   
   <div class="container">
     <main class="main-content">
-      <img src="DataNXT_icon_raw.png" alt="DataNXT Logo" class="main-logo">
+      <!-- Updated the main-logo to include the onclick handler -->
+      <img src="DataNXT_icon_raw.png" alt="DataNXT Logo" class="main-logo" onclick="toggleChatbot()">
       <h1 class="main-title">DataNXT</h1>
       <p class="main-tagline">The best place for financial analysis, fast, smart, and reliable.</p>
       <button class="sign-in-button" onclick="loadChatbot()">Try Now</button>
