--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DataNXT</title>
+  <link rel="icon" href="datanxt.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
