--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     </div>
   </header>
   
+  <!-- Responsive DataNXT Icon -->
+  <img id="dataNXTIcon"
+       src="DataNXT_icon_raw.png"
+       srcset="DataNXT_icon_raw@2x.png 2x, DataNXT_icon_raw.png 1x"
+       alt="DataNXT Icon">
+  
   <div class="container">
     <main class="main-content">
       <!-- Logo -->
@@ -26,7 +32,9 @@
       <h1 class="main-title">DataNXT</h1>
     
       <!-- Tagline -->
-      <p class="main-tagline">The best place for financial analysis, fast, smart, and reliable.</p>
+      <p class="main-tagline">
+        The best place for financial analysis, fast, smart, and reliable.
+      </p>
     </main>
   </div>
   
