--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
   </header>
   
-  <!-- Responsive DataNXT Icon -->
+  <!-- Small icon stays fixed in the upper left corner -->
   <img id="dataNXTIcon"
        src="DataNXT_icon_raw.png"
        srcset="DataNXT_icon_raw@2x.png 2x, DataNXT_icon_raw.png 1x"
@@ -22,7 +22,7 @@
   
   <div class="container">
     <main class="main-content">
-      <!-- Logo -->
+      <!-- Logo (centers on the page initially and animates on load) -->
       <img src="DataNXT_icon_raw.png" alt="DataNXT Logo" class="main-logo">
     
       <!-- Button -->
@@ -32,9 +32,7 @@
       <h1 class="main-title">DataNXT</h1>
     
       <!-- Tagline -->
-      <p class="main-tagline">
-        The best place for financial analysis, fast, smart, and reliable.
-      </p>
+      <p class="main-tagline">The best place for financial analysis, fast, smart, and reliable.</p>
     </main>
   </div>
   
