--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     .main-logo {
       width: 30vw;
       max-width: 300px;
-      min-width: 150px;
+      min-width: auto;
       height: auto;
       transition: all 0.5s ease;
     }
