--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h1 class="main-title">DataNXT</h1>
     
       <!-- Tagline -->
-      <p class="main-tagline">The best place for financial analysis, fast, smart, and reliable.</p>
+      <p class="main-tagline">Transform Data into Insight.</p>
     </main>
   </div>
   
@@ -85,7 +85,7 @@
       requestAnimationFrame(() => {
         mainLogo.classList.add('move-to-header');
         mainTitle.classList.add('move-to-header-title');
-        mainTitle.textContent = 'DataNXT Equity';
+        mainTitle.textContent = 'DataNXT';
         mainTagline.classList.add('move-to-header-tagline');
       });
       
