--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       // If you'd like to keep the UI updates, you can still show a placeholder:
       document.getElementById("q-smart").innerText = "Under Review: " + prompt;
       document.getElementById("answer-datanxt").innerText = "DataNXT Agent is not available right now.";
-      document.getElementById("answer-openai").innerText = "OpenAI Agent is not available right now.";
+      document.getElementById("answer-openai").innerText = "Normal AI Agent is not available right now.";
 
       // Below is the future code you can re-enable when your API is ready:
       /*
