--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <div class="answer-container">
       <div class="answer-box" id="answer-datanxt">Answer with DataNXT Prompt</div>
-      <div class="answer-box" id="answer-openai">Answer from General AI</div>
+      <div class="answer-box" id="answer-openai">Answer without DataNXT Prompt</div>
     </div>
   </div>
 
