--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       alert("This feature is currently under review and not yet operational. Will be available within the next 7 days!");
       
       // If you'd like to keep the UI updates, you can still show a placeholder:
-      document.getElementById("q-smart").innerText = "Under Review: " + prompt;
+      document.getElementById("q-smart").innerText = "Under Review: ";
       document.getElementById("answer-datanxt").innerText = "DataNXT Agent is not available right now.";
       document.getElementById("answer-openai").innerText = "General AI Agent is not available right now.";
 
